--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -1,3 +1,5 @@
+@import '../../../theme.scss';
+
 .component-login {
   display: flex;
   justify-content: center;
@@ -11,13 +13,13 @@
     flex-direction: column;
     align-items: center;
 
-    padding: 48px;
+    padding: $spacer*2 $spacer*4 $spacer*4 $spacer*4;
 
     &-logo {
       img {
-        height: 96px;
+        height: $spacer*8;
 
-        margin-bottom: 24px;
+        margin-bottom: $spacer*2;
       }
     }
 
@@ -31,7 +33,7 @@
       }
 
       button {
-        margin-top: 24px;
+        margin-top: $spacer*2;
       }
     }
 
@@ -39,7 +41,7 @@
       display: flex;
       justify-content: space-between;
 
-      margin-top: 24px;
+      margin-top: $spacer*2;
 
       color: grey;
       font-size: 12px;
