--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,8 @@ body {
 
   margin: 0;
 
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  color: $color-grey-darkest;
+  font-family: 'Lato', sans-serif;
 }
 
 a {
