--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,6 +4,18 @@
 // Colors
 $color-primary: #607D8B;
 
+$color-grey: #9E9E9E;
+$color-grey-light: lighten($color-grey, 10);
+$color-grey-lighter: lighten($color-grey, 20);
+$color-grey-lightest: lighten($color-grey, 30);
+$color-grey-dark: darken($color-grey, 10);
+$color-grey-darker: darken($color-grey, 30);
+$color-grey-darkest: darken($color-grey, 50);
+
+$color-amber: #FFC107;
+
+$color-green: #4CAF50;
+
 $my-app-primary: mat-palette($mat-blue-grey);
 $my-app-accent:  mat-palette($mat-pink, 500, 900, A100);
 $my-app-warn:    mat-palette($mat-deep-orange);
@@ -12,3 +24,5 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 
 // Dimensions
 $spacer: 12px;
+
+$border-radius: 12px;
