--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -8,23 +8,6 @@
   height: 100%;
   width: 100%;
 
-  -webkit-animation: bgcolor 120s infinite;
-  animation: bgcolor 60s infinite;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
-
-  @keyframes bgcolor {
-    0% {
-      background-color: #EFCE4A
-    }
-    50% {
-      background-color: #ED8A19
-    }
-    100% {
-      background-color: #EA6248
-    }
-  }
-
   &-container {
     display: flex;
     flex-direction: column;
@@ -36,12 +19,14 @@
 
     border-radius: $border-radius;
 
+    @include mat-elevation(1);
+
     &-logo {
       display: flex;
       flex-direction: column;
       align-items: center;
 
-      margin-bottom: $spacer;
+      margin-bottom: $spacer*2;
 
       img {
         height: $spacer*8;
