--- a/src/app/survey/survey/survey.component.html
+++ b/src/app/survey/survey/survey.component.html
@@ -1,4 +1,4 @@
-<div class="component-login">
+<div @fade class="component-login">
   <form class="example-form">
     <mat-form-field class="example-full-width">
       <input matInput placeholder="Favorite food" value="Sushi">
