--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -86,5 +86,43 @@
       color: grey;
       font-size: 12px;
     }
+
+    &-user {
+      display: flex;
+      align-items: center;
+
+      margin: $spacer*2 0 0 0;
+      padding: $spacer $spacer*2;
+      border-radius: $border-radius/2;
+
+      background-color: white;
+
+      img {
+        max-width: $spacer*4;
+        max-height: $spacer*4;
+        border-radius: 50%;
+      }
+
+      div {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+
+        height: $spacer*4;
+
+        margin-left: $spacer;
+
+        span {
+          &:first-child {
+            font-size: 12px;
+            color: $color-grey;
+          }
+
+          &:nth-child(2) {
+            font-weight: bold;
+          }
+        }
+      }
+    }
   }
 }
