--- a/src/app/survey/survey/survey.component.html
+++ b/src/app/survey/survey/survey.component.html
@@ -1,11 +1,15 @@
-<div @fade class="component-login">
+<div class="component-survey">
   <form class="example-form">
     <mat-form-field class="example-full-width">
       <input matInput placeholder="Favorite food" value="Sushi">
     </mat-form-field>
-
     <mat-form-field class="example-full-width">
       <textarea matInput placeholder="Leave a comment"></textarea>
     </mat-form-field>
   </form>
+  <div>
+    <p>
+      test
+      </p>
+    </div>
 </div>
