--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -31,15 +31,15 @@
         </button>
       </mat-form-field>
       <div class="component-login-container-buttonList">
-        <button mat-flat-button [disabled]="email === '' || password === ''" (click)="handleClick()">
+        <button mat-button [disabled]="email === '' || password === ''" (click)="handleClick()">
           <mat-icon svgIcon="frontway" aria-hidden="false" aria-label="frontway icon"></mat-icon>
           <span>FrontWay Login</span>
         </button>
-        <button mat-flat-button (click)="loginUser()">
+        <button mat-button (click)="loginUser()">
           <mat-icon svgIcon="google" aria-hidden="false" aria-label="google icon"></mat-icon>
           <span>Google Login</span>
         </button>
-        <button mat-flat-button (click)="githubLogin()">
+        <button mat-button (click)="githubLogin()">
           <mat-icon svgIcon="github" aria-hidden="false" aria-label="github icon"></mat-icon>
           <span>GitHub Login</span>
         </button>
@@ -59,7 +59,10 @@
         </div>
       </div>
       <div class="component-login-container-buttonList">
-        <button mat-flat-button (click)="logoutUser()">
+        <button mat-button (click)="handleContinue()">
+          <span>Continue</span>
+        </button>
+        <button color="warn" mat-button (click)="logoutUser()">
           <span>Logout</span>
         </button>
       </div>
