Add: Card + Stepper (not finished)

--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -11,7 +11,7 @@
       <span>{{ user$.displayName }}</span>
     </button>
     <mat-menu #menu="matMenu" xPosition="before">
-      <button disabled mat-menu-item>Settings</button>
+      <button disabled mat-menu-item>Account</button>
       <button mat-menu-item (click)="logoutUser()">Logout</button>
     </mat-menu>
   </mat-toolbar-row>
