--- a/src/theme.scss
+++ b/src/theme.scss
@@ -18,6 +18,9 @@ $color-grey-darkest: darken($color-grey, 50);
 $color-amber: #FFC107;
 
 $color-green: #4CAF50;
+$color-lightGreen: #8BC34A;
+$color-red: #f44336;
+$color-orange: #FF9800;
 
 $my-app-primary: mat-palette($mat-blue, 700);
 $my-app-accent:  mat-palette($mat-pink, 500, 900, A100);
