--- Projekt neu aufgesetzt ---

--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<div class="component-navigation">
+<nav class="component-navigation">
   <a mat-stroked-button routerLink="/survey" routerLinkActive="active-link">
     <mat-icon aria-hidden="false" aria-label="assignment icon">assignment</mat-icon>
     <span>Survey</span>
@@ -7,4 +7,4 @@
     <mat-icon aria-hidden="false" aria-label="assignment icon">history</mat-icon>
     <span>History</span>
   </a>
-</div>
+</nav>
