--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<div class="component-app">
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.9)"
+  size="medium"
+  color="white"
+  type="timer">
+</ngx-spinner>
+
+<main class="component-app">
   <router-outlet></router-outlet>
-</div>
+</main>
