Added component querstionContainer

--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,10 +1,10 @@
 <nav class="component-navigation">
   <a mat-stroked-button routerLink="/survey" routerLinkActive="active-link">
     <mat-icon aria-hidden="false" aria-label="assignment icon">assignment</mat-icon>
-    <span>Survey</span>
+    <span>Fragebogen</span>
   </a>
   <a mat-stroked-button routerLink="/history" routerLinkActive="active-link">
     <mat-icon aria-hidden="false" aria-label="assignment icon">history</mat-icon>
-    <span>History</span>
+    <span>Verlauf</span>
   </a>
 </nav>
