--- a/src/app/survey/survey/survey.component.scss
+++ b/src/app/survey/survey/survey.component.scss
@@ -1,4 +1,9 @@
 @import '../../../theme.scss';
 
 .component-survey {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: $spacer;
 }
