--- a/src/theme.scss
+++ b/src/theme.scss
@@ -19,8 +19,11 @@ $color-amber: #FFC107;
 
 $color-green: #4CAF50;
 $color-lightGreen: #8BC34A;
+$color-lime: #CDDC39;
 $color-red: #f44336;
-$color-orange: #FF9800;
+$color-amber: #FF9800;
+$color-orange: #FFC107;
+$color-yellow: #FFEB3B;
 
 $my-app-primary: mat-palette($mat-blue, 700);
 $my-app-accent:  mat-palette($mat-pink, 500, 900, A100);
