--- a/src/app/layout/navigation/navigation.component.scss
+++ b/src/app/layout/navigation/navigation.component.scss
@@ -1,7 +1,7 @@
 @import '../../../theme.scss';
 
 .component-navigation {
-  padding: $spacer*1.5 0;
+  padding: $spacer*2 $spacer;
 
   a {
     margin-right: $spacer;
