Added rating functionality and other stuff

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -18,7 +18,8 @@
     &-content {
       position: relative;
       z-index: 2;
-      max-width: 1200px;
+      width: 75%;
+      max-width: 900px;
     }
 
     &-background {
