--- a/src/theme.scss
+++ b/src/theme.scss
@@ -25,6 +25,13 @@ $color-amber: #FF9800;
 $color-orange: #FFC107;
 $color-yellow: #FFEB3B;
 
+$color-angular: #DD0031;
+$color-vue: #41B883;
+$color-react: #61DAFB;
+$color-preact: #673AB8;
+$color-svelte: #FFC107;
+$color-ember: #8D6E63;
+
 $my-app-primary: mat-palette($mat-blue, 700);
 $my-app-accent:  mat-palette($mat-pink, 500, 900, A100);
 $my-app-warn:    mat-palette($mat-deep-orange);
