--- a/src/app/survey/survey/info-container/info-container.component.scss
+++ b/src/app/survey/survey/info-container/info-container.component.scss
@@ -7,6 +7,11 @@
     width: 804px;
     height: 600px;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     mat-card-header {
       display: flex;
       justify-content: center;
@@ -15,8 +20,15 @@
       padding: 0 $spacer;
 
       span {
+        display: flex;
+        align-items: center;
+
         font-size: 2em;
         font-weight: bold;
+
+        button {
+          margin-left: $spacer;
+        }
       }
     }
 
@@ -28,6 +40,20 @@
       p {
         line-height: 1.6;
         padding: $spacer*4 0;
+      }
+
+      .results {
+        display: flex;
+
+        &-frameworks {
+          display: flex;
+          flex-direction: column;
+        }
+
+        app-winner-box {
+          width: 100%;
+          padding-left: $spacer*2;
+        }
       }
     }
 
