Funktionalität erfoglreich eingebaut (bis auf Mehrfachauswahl)

--- a/src/app/survey/survey/result-box/result-box.component.html
+++ b/src/app/survey/survey/result-box/result-box.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="component-resultBox-grade" [class]="name">
-    <span>{{ grade }}</span>
+    <span>{{ grade | number:'1.1-1' }}</span>
   </div>
 
   <!-- <div class="component-resultBox-text" [class]="name">
