--- a/src/theme.scss
+++ b/src/theme.scss
@@ -7,6 +7,8 @@ $color-primary-light: lighten($color-primary, 10);
 $color-primary-lighter: lighten($color-primary, 20);
 $color-primary-lightest: lighten($color-primary, 40);
 
+$color-secondary: #e91e63;
+
 $color-grey: #9E9E9E;
 $color-grey-light: lighten($color-grey, 10);
 $color-grey-lighter: lighten($color-grey, 20);
