--- a/src/app/admin/edit-framework/edit-framework.component.scss
+++ b/src/app/admin/edit-framework/edit-framework.component.scss
@@ -1,13 +1,7 @@
 @import '../../../theme.scss';
 
-mat-tab-group {
-  .navLogo {
-      max-width: 25px;
-      max-height: 25px;
-  }
-}
 
-.component-editDialog {
+.component-editFramework {
   height: 100%;
   width: 100%;
 
@@ -31,10 +25,4 @@ mat-tab-group {
     margin: 0;
   }
 
-}
-
-::ng-deep.mat-tab-label, ::ng-deep.mat-tab-label-active{
- min-width: 50px!important;
- padding: 3px!important;
- margin: 3px!important;
 }
